--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "express": "~4.13.4",
     "express-session": "^1.14.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "serve-favicon": "~2.3.0"
   }
 }
