--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-session": "^1.14.1",
     "jade": "~1.11.0",
+    "jquery": "^3.1.0",
     "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
@@ -19,6 +25,8 @@
     "passport-local-mongoose": "^4.0.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.6.1"
   }
 }
